--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta name ="viewport" content="width=device-width, initial-scale=1.0">
-  <title>To-Do List App</title>
+  <title>To-Do List app</title>
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
